add built-in-pipe examples

--- a/src/app/components/category/update-category/update-category.component.html
+++ b/src/app/components/category/update-category/update-category.component.html
@@ -5,5 +5,5 @@
   <label for="description">Description:</label>
   <input id="description" formControlName="description" />
 
-  <button type="submit" mat-button>Update</button>
+  <button type="submit">Update</button>
 </form>
