--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,8 @@
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/products">Products</a></li>
       <li><a routerLink="/categories">Categories</a></li>
+      <li><a routerLink="/pipes">Pipes</a></li>
+      <li><a routerLink="/translate">Translate</a></li>
     </ul>
   </nav>
 </header>
