--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
 <p>home works!</p>
+
+<button (click)="switchLanguage('en')">English</button>
+<button (click)="switchLanguage('tr')">Türkçe</button>
+
+<h1>{{ "HOME.TITLE" | translate }}</h1>
+
+<p>{{ "HOME.PARAGRAPH" | translate }}</p>
