--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,7 @@
       <li><a routerLink="/categories">Categories</a></li>
       <li><a routerLink="/pipes">Pipes</a></li>
       <li><a routerLink="/translate">Translate</a></li>
+      <li><a routerLink="/directives">Directives</a></li>
     </ul>
   </nav>
 </header>
