--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -26,3 +26,17 @@ nav ul li a {
 nav ul li a:hover {
   background-color: #555;
 }
+
+.login-link {
+  background-color: white;
+
+  border: 2px solid gainsboro;
+}
+
+.login-link :hover {
+  background-color: gainsboro !important;
+}
+
+.login-link a {
+  color: black !important;
+}
