--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,6 +7,8 @@
       <li><a routerLink="/pipes">Pipes</a></li>
       <li><a routerLink="/translate">Translate</a></li>
       <li><a routerLink="/directives">Directives</a></li>
+      <li class="login-link"><a routerLink="/login">Login</a></li>
+      <li class="login-link"><a routerLink="/signup">Signup</a></li>
     </ul>
   </nav>
 </header>
