add welcome directive, highlight directive

--- a/src/app/pages/directives/directives.component.html
+++ b/src/app/pages/directives/directives.component.html
@@ -29,14 +29,14 @@
 
 <div>
   <h2>Multiple Elements Directive</h2>
-  <div *appMultiple="3">
-    <p>This paragraph will be repeated 3 times.</p>
+  <div *appMultiple="number">
+    <p>This paragraph will be {{ number }} repeated times.</p>
   </div>
 </div>
 
 <div>
   <h2>Welcome Directive with Delay</h2>
-  <div *appWelcome="2000"></div>
+  <h1 *appWelcome="2000">Mehmet</h1>
 </div>
 
 <footer class="foooter"></footer>
