--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -11,7 +11,14 @@
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td
+      [appHighlight]="'yellow'"
+      [description]="element.description"
+      mat-cell
+      *matCellDef="let element"
+    >
+      {{ element.name }}
+    </td>
   </ng-container>
 
   <!-- description Column -->
